# posts

./: .gitignore  Dockerfile  README.MD  docker-compose.yaml  nginx_default.conf  pyproject.toml
application/app_service/: .env.template  Dockerfile
application/app_service/src/: env_config.py  redis_client.py
application/app_service/src/auth/: auth.py  utils.py
application/app_service/src/models/: comments.py  posts.py  users.py
application/app_service/src/repositories/: followers.py  images.py
application/app_service/src/routers/: users.py
application/app_service/src/schemas/: comments.py  posts.py  users.py
application/app_service/src/services/: comments.py  followers.py  users.py
application/app_service/src/tests/: conftest.py
application/app_service/src/utils/: common.py
application/media_service/: Dockerfile
application/media_service/src/: client.py  main.py
application/media_service/src/schemas/: media.py
application/notification_service/: Dockerfile
application/notification_service/src/: env_config.py
postbin/fastapi_service/: pyproject.toml
postbin/fastapi_service/src/: alembic.ini  config.py  dependencies.py  log_config.py  main.py  pytest.ini
postbin/media_service/: .env.template  pyproject.toml
postbin/media_service/src/: env_config.py  log_config.py
postbin/media_service/src/communicate/: media.py
postbin/media_service/src/routers/: media.py
postbin/notification_service/: .env.template
postbin/notification_service/src/: config.py  log_config.py  main.py  utils.py
prometheus_data/: prometheus.yml
(+26 files in other folders)
